- more fixes to run on VPS   - use local norad files in prod   - fix to labels on the start of satellite passes   - fixes for tests